<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Fare -->
        <TextView
            android:id="@+id/tvFare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fare_25_50"
            android:textSize="14sp" />

        <!-- Start Time -->
        <TextView
            android:id="@+id/tvStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time_01_01_2023_10_00"
            android:textSize="14sp" />

        <!-- End Time -->
        <TextView
            android:id="@+id/tvEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time_01_01_2023_10_30"
            android:textSize="14sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
