<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Auth.HomeLogin"
    android:background="@color/bleu_clair">

    <!-- Lottie Animation -->


    <!-- Welcome Text -->

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/logoAnimationView"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="120dp"
        app:layout_constraintBottom_toTopOf="@+id/welcomeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/home_login" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="60dp"
        android:src="@drawable/app_logo"
        app:layout_constraintBottom_toTopOf="@+id/welcomeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoAnimationView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/entry_to_app"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoAnimationView" />

    <!-- Customer Button -->
    <Button
        android:id="@+id/btnCustomer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_entry_cst"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitle" />

    <!-- Driver Button -->
    <Button
        android:id="@+id/btnDriver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_entry_drv"
        android:textColor="@color/white"
        android:backgroundTint="@color/grain"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCustomer" />

</androidx.constraintlayout.widget.ConstraintLayout>
